update model and api